fix side menu visibility

--- a/src/scss/blocks/side-menu.scss
+++ b/src/scss/blocks/side-menu.scss
@@ -20,6 +20,7 @@
   
   @media (min-width: $desktop) {
     transform: none;
+    visibility: visible;
     height: 100vh;
     display: block;
     box-shadow: none;
